Fixed layout on mobile

--- a/documentation/components/Tabs.module.css
+++ b/documentation/components/Tabs.module.css
@@ -9,9 +9,9 @@
 }
 
 .tab {
-  border: none;
+  border: 1px solid transparent;
   background: none;
-  margin: 0;
+  margin: 0 0 -1px 0;
   padding: 0.5em 1em;
   cursor: pointer;
   font-weight: bold;
@@ -23,4 +23,11 @@
   background: #1e1e1e;
   color: #d4d4d4;
   outline: none;
+  border-color: #1e1e1e;
+}
+
+.tab.white.tab.selected {
+  background: transparent;
+  border-bottom-color: white;
+  color: #1e1e1e;
 }
