--- a/documentation/pages/use-boolean-state/style.module.css
+++ b/documentation/pages/use-boolean-state/style.module.css
@@ -1,9 +1,3 @@
-.cols {
-  display: grid;
-  grid-template-columns: 300px minmax(0, 1fr);
-  padding-top: 1em;
-}
-
 .demo {
   padding: 1em;
 }
