--- a/documentation/style.css
+++ b/documentation/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   min-height: 100%;
 }
@@ -13,7 +17,9 @@ body {
 }
 
 main {
-  margin: 0 1em;
+  padding: 0 1em;
+  background: white;
+  z-index: 1;
 }
 
 main p {
@@ -21,11 +27,14 @@ main p {
 }
 
 #layout {
-  display: flex;
-  min-height: 100vh;
+  display: grid;
+  grid-template-columns: max-content minmax(0, 1fr);
 }
 
 nav {
+  position: sticky;
+  top: 0;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   background: #1e1e1e;
@@ -62,6 +71,19 @@ nav a.selected {
   color: #1e1e1e;
 }
 
-* {
-  box-sizing: border-box;
+@media (max-width: 800px) {
+  #layout {
+    grid-template-columns: minmax(0, 1fr);
+  }
+
+  nav {
+    top: 0;
+    height: auto;
+    border-left: none;
+  }
+
+  nav a.selected {
+    background: none;
+    color: white;
+  }
 }
